--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.5.2",
+    "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
