--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.9.0",
     "cropperjs": "^1.5.13",
+    "date-fns": "^4.1.0",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
