--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.9.0",
+    "buffer": "^6.0.3",
     "cropperjs": "^1.5.13",
     "date-fns": "^4.1.0",
     "idb-keyval": "^6.2.1",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.5.2",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.19.1",
     "tailwindcss": "^4.1.4"
   },
