Edit bug CRUD Manage Spices

--- a/client/.env
+++ b/client/.env
@@ -2,7 +2,8 @@
 # Use Like This import.meta.env.VITE_AXIOS_SERVER_URL
 VITE_AXIOS_SERVER_URL=http://localhost:5001/api/v1
 
-
+# Use Like This import.meta.env.VITE_SERVER_URL
+VITE_SERVER_URL=http://localhost:5001
 
 # Model
 # Use Like This import.meta.env.VITE_AXIOS_MODEL_URL 
