--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "cropperjs": "^1.5.13",
     "date-fns": "^4.1.0",
     "idb-keyval": "^6.2.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-cropper": "^2.3.3",
@@ -24,6 +25,7 @@
     "react-easy-crop": "^5.4.1",
     "react-hot-toast": "^2.5.2",
     "react-image-crop": "^11.0.10",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.19.1",
